name:                hubble
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/iand675/hubble#readme
license:             BSD3
license-file:        LICENSE
author:              Ian Duncan
maintainer:          ian@iankduncan.com
copyright:           Copyright: (c) 2015 Ian Duncan
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     GitHub
                     -- , GitHub.Activity.Events
                     -- , GitHub.Activity.EventTypes
                     -- , GitHub.Activity.Feeds
                     -- , GitHub.Activity.Notifications
                     -- , GitHub.Activity.Starring
                     -- , GitHub.Activity.Watching
                     -- , GitHub.Enterprise.AdminStats
                     -- , GitHub.Enterprise.LDAP
                     -- , GitHub.Enterprise.License
                     -- , GitHub.Enterprise.ManagementConsole
                     -- , GitHub.Enterprise.OrganizationAdministration
                     -- , GitHub.Enterprise.SearchIndexing
                     -- , GitHub.Gists
                     -- , GitHub.Gists.Comments
                     -- , GitHub.GitData.Blobs
                     -- , GitHub.GitData.Commits
                     -- , GitHub.GitData.References
                     -- , GitHub.GitData.Tags
                     -- , GitHub.GitData.Trees
                     -- , GitHub.Issues
                     -- , GitHub.Issues.Assignees
                     -- , GitHub.Issues.Comments
                     -- , GitHub.Issues.Events
                     , GitHub.Issues.Labels
                     -- , GitHub.Issues.Milestones
                     , GitHub.Miscellaneous.Emoji
                     -- , GitHub.Miscellaneous.Gitignore
                     -- , GitHub.Miscellaneous.Licenses
                     -- , GitHub.Miscellaneous.Markdown
                     -- , GitHub.Miscellaneous.Meta
                     , GitHub.Miscellaneous.RateLimit
                     , GitHub.Organizations
                     -- , GitHub.Organizations.Members
                     -- , GitHub.Organizations.Migrations
                     -- , GitHub.Organizations.Teams
                     -- , GitHub.Organizations.Webhooks
                     -- , GitHub.PullRequests
                     -- , GitHub.PullRequests.ReviewComments
                     -- , GitHub.Repositories
                     -- , GitHub.Repositories.Collaborators
                     -- , GitHub.Repositories.Comments
                     -- , GitHub.Repositories.Commits
                     -- , GitHub.Repositories.Contents
                     , GitHub.Repositories.DeployKeys
                     , GitHub.Repositories.Deployments
                     , GitHub.Repositories.Forks
                     , GitHub.Repositories.Merging
                     , GitHub.Repositories.Pages
                     , GitHub.Repositories.Releases
                     , GitHub.Repositories.Statistics
                     , GitHub.Repositories.Statuses
                     , GitHub.Repositories.Webhooks
                     -- , GitHub.Search
                     -- , GitHub.Users
                     -- , GitHub.Users.Administration
                     -- , GitHub.Users.Emails
                     -- , GitHub.Users.Followers
                     -- , GitHub.Users.PublicKeys
                     , GitHub.Types
                     , GitHub.Internal

  build-depends:       base >= 4.7 && < 5
                     , lens
                     , http-client
                     , http-client-tls
                     , resource-pool
                     , text
                     , bytestring
                     , http-types
                     , unordered-containers
                     , hashable
                     , aeson
                     , mtl
                     , case-insensitive
                     , vector
                     , thyme
                     , blaze-builder
                     , template-haskell
                     , wai

  default-language:    Haskell2010

test-suite hubble-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hubble
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/iand675/hubble
